# awsmanagement

./: .gitignore  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
awsmanagement/: client.py  environments.py  helper.py  main.py  updatetag.py
hooks/: hook-awsmanagement.py  hook-boto3.py  hook-botocore.py
tests/integration/: test_app.py
tests/unit/: test_client.py  test_main.py
