[metadata]
name = awsmanagement
description = Python scripts for managing AWS Infrastructure
author = Gobin Sougrakpam

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    awsmanagement

[entry_points]
console_scripts = 
    awsmanagement = awsmanagement.main:main

awsmanagement.app =
    update-wrk = awsmanagement.updatetag:Update_wrk
